force-app/main/default/objects/leaseworks__MR_Calculation__c/leaseworks__MR_Calculation__c.object-meta.xml
<CustomObject>
    <label>MR Calculation</label>
    <nameField>
        <displayFormat>MR -{0000}</displayFormat>
        <label>MR Calculaton Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MR Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>