force-app/main/default/objects/leaseworks__MR_Calculation__c/fields/leaseworks__Escalation_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Escalation_Type__c</fullName>
    <formula>TEXT(leaseworks__Supplemental_Rent__r.leaseworks__Escalation_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation Type</label>
    <type>Text</type>
</CustomField>