force-app/main/default/objects/leaseworks__MR_Calculation__c/fields/leaseworks__MR_Calculation__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_Calculation__c</fullName>
    <description>Background calculation details for effective MR rates</description>
    <inlineHelpText>Background calculation details for effective MR rates</inlineHelpText>
    <label>MR Calculation</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>