force-app/main/default/objects/leaseworks__MR_Calculation__c/fields/leaseworks__Utilization__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Utilization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utilization</label>
    <referenceTo>leaseworks__Utilization_Report__c</referenceTo>
    <relationshipLabel>MR Calculations</relationshipLabel>
    <relationshipName>MR_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>