force-app/main/default/objects/leaseworks__MR_Calculation__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Month_Ending_F__c</columns>
    <columns>leaseworks__Supplemental_Rent__c</columns>
    <columns>leaseworks__Supplemental_Rent_Utilization__c</columns>
    <columns>leaseworks__Utilization__c</columns>
    <columns>leaseworks__Escalation_Type__c</columns>
    <columns>leaseworks__True_up_Invoice_Calculation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>